test/typechecker.d/invalid/fns8.souc.bad
f(n: Integer): Integer = fndo
	return
